<resources>
    <string name="app_name">JointJourney</string>

    <!--    Layout string-->
    <string name="layout_login_name">JOINT JOURNEY</string>
    <string name="slogan">TOGETHER WE GO</string>

    <string name="fragment">Fragment</string>
    <!--    String Tim chuyen di-->
    <string name="fragment_help_1">1) Hãy đăng ký và xác minh thông tin của bạn với chúng tôi, yên tâm mọi thứ đều được bảo mật.</string>
    <string name="fragment_help_2">2) Hãy chọn điểm đi và điểm đến của bạn trên bản đồ, chúng tôi sẽ tìm hành trình phù hợp với bạn nhất. </string>
    <string name="fragment_help_3">3) Sau khi bạn chọn xong, hãy đợi tài xế xác nhận chuyến đi nhé.</string>
    <string name="fragment_help_4">4) Hoàn tất, hãy đến địa điểm đón và đi thôi nào, chúc bạn có một chuyến đi vui vẻ.</string>
    <string name="fragment_help_5">5) Đừng quên đánh giá chuyến đi của mình, điều này sẽ giúp Joint Journey phục vụ bạn tốt hơn.</string>
    <!--    String Dang chuyen di-->
    <string name="fragment_help_6">1) Chọn chuyến đi của bạn trên bản đồ, sau đó điền các thông tin theo yêu cầu.</string>
    <string name="fragment_help_7">2) Khi có yêu cầu đồng hành, hãy đồng ý nhé.</string>
    <string name="fragment_help_8">3) Hãy đến đón người đồng hành của bạn và tận hưởng chuyến đi của mình.</string>


    <string name="edit_email">Edit email</string>
    <string name="edit_password">Edit password</string>
    <string name="edit_details">Edit details</string>
    <string name="payment_information">Payment Information</string>
    <string name="car_information">Car Information</string>
    <string name="offer_ride">Offer ride</string>
    <string name="find_ride">Find ride</string>

    <!-- Firebase database fields -->
    <string name="dbName_user">user</string>
    <string name="dbName_availableRide">availableRide</string>
    <string name="field_username">username</string>
    <string name="field_email">email</string>

    <!-- Settings preference fragment -->
    <string name="pref_sort_label">Sort Order</string>
    <string name="pref_sort_label_popular">Most Popular</string>
    <string name="pref_sort_label_rating">Top Rated</string>
    <string name="pref_sort_label_favorite">Favorites</string>
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_sort_popular" translatable="false">popular</string>
    <string name="pref_sort_rating" translatable="false">rating</string>
    <string name="pref_sort_favorite" translatable="false">favorites</string>

    <!-- Dialog names -->
    <string name="confirm_password_dialog">Confirm Password Dialog</string>
    <string name="welcome_password_dialog">Welcome Dialog</string>

    <!-- Braintree API keys -->
    <string name="API_GET_TOKEN">SEE TUTORIAL</string>
    <string name="API_CHECK_OUT">SEE TUTORIAL</string>

    <!-- Google maps API key -->
    <string name="google_maps_key">YOUR_API_KEY</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Same gender</string>
    <string name="pref_description_social_recommendations">Enable this option for same gender carpooling for extra security measures
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Language</string>
    <string-array name="pref_example_list_titles">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>Italin</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
    </string-array>

    <string-array name="pref_range_list_titles">
        <item>10 meters</item>
        <item>20 meters</item>
        <item>30 meters</item>
        <item>40+ meters</item>
    </string-array>
    <string-array name="pref_range_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
        <item>-2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>