<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relLayout1_fragment_details">

            <include layout="@layout/snippet_top_help"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="50dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/RequestRide"
                    android:text="Tìm chuyến đi"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/step_one"
                    android:layout_below="@id/RequestRide">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_identity"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:text="@string/fragment_help_1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/step_two"
                    android:layout_below="@id/step_one">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_step_two"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:text="@string/fragment_help_2"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/step_three"
                    android:layout_below="@id/step_two">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_step_three"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:text="@string/fragment_help_3"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/step_four"
                    android:layout_below="@id/step_three">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_step_four"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:text="@string/fragment_help_4"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/step_five"
                    android:layout_below="@id/step_four">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_step_five"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:text="@string/fragment_help_5"/>
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/OfferRide"
                    android:layout_below="@id/step_five"
                    android:text="Đăng chuyến đi"
                    android:textAlignment="center"
                    android:layout_marginTop="30dp"
                    android:textSize="20dp"
                    android:gravity="center_horizontal" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/step_six"
                    android:layout_below="@id/OfferRide">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_step_six"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:text="@string/fragment_help_6"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/step_seven"
                    android:layout_below="@id/step_six">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_step_seven"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:text="@string/fragment_help_7"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:id="@+id/step_eight"
                    android:layout_below="@id/step_seven">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/ic_step_eight"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:text="@string/fragment_help_8"/>
                </LinearLayout>

            </RelativeLayout>

        </ScrollView>


    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>